# sero-core-opengl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  temp.cpp
docker/: Dockerfile  compile_and_run.sh
include/: core-opengl.h
src/: core-opengl.cpp
tests/: main.cpp
